many changes added
