# NodeJS/app/controllers/user.js
@@ -50,7 +50,7 @@ exports.login = (req, res, next) => {
         if (passwordIsFine) {
           logger.info('Logged in');
           const token = signJWT(userWithDateMapper(user));
-          return res.set('Authorization', `${TOKEN_START} ${token}`).send('Logged in');
+          return res.set('Authorization', `${TOKEN_START}${token}`).send('Logged in');
         }
         throw signinError('Email or password is incorrect');
       });
